--- a/NTransmissionClient/NTransmissionClient.csproj
+++ b/NTransmissionClient/NTransmissionClient.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="JsonPushContent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionStatistics.cs" />
     <Compile Include="TorrentAddRequest.cs" />
